--- a/src/features/new-arrivals/new-arrivals.css
+++ b/src/features/new-arrivals/new-arrivals.css
@@ -1,38 +1,68 @@
 .new-arrivals {
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
-  /* border: 1px solid red; */
-  color: #1B1C1E;
-  /* font-family: sans-serif; */
-}
-.new-products {
   /* border: 1px solid green; */
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+}
+
+
+.category {
+  display: block;
+  color: #9e9e9e;
+  margin-bottom: 0.7rem;
+  margin-top: 0.8rem;
 }
 
 .new-product {
   /* border: 1px solid blue; */
-  width: 70%;
   margin: 0 auto;
-  border-radius: 6px;
   text-decoration: none;
-  color: #1B1C1E;
+  color: #01040a;
+  max-width: 265px;
+  margin-bottom: 0.5rem;
+}
+
+.sale{
+  position: relative;
+  display: flex;
+ 
+  max-width: 1120px;
+  height: 450px;
+  margin: 0 auto;
+  margin-top: 5rem;
+  
+}
+.overlay-sale{
+position: absolute;
+background-color: rgba(0, 0, 0, 0.5);
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 4;
+}
+
+.banner-img{
+   width: 100%;
+   height: 100%;
+ /* height: 80%; */
+  object-fit: cover;
 }
 .new-product-head {
   position: relative;
   /* border: 1px solid red; */
+  height: 85%;
 }
 .new-product-head img {
   width: 100%;
-  height: 70%;
+  height: 100%;
+  object-fit: cover;
 }
 .new-product-banner {
   position: absolute;
   display: block;
   z-index: 2;
   color: #f6f6f6;
-  background-color: green;
+  background-color: #0c0e11a6;
   letter-spacing: 1px;
   font-size: 0.7rem;
   left: 10px;
@@ -42,21 +72,40 @@
   font-family: sans-serif;
   /* border-radius: 3px; */
 }
-.new-product-body{
-    font-family: sans-serif;
-    display: flex;
-    flex-flow: column;
-    gap: 0.7rem;
-    margin-top: 0.4rem;
-    font-weight: 600;
-    padding-left: 0.5rem;
-
+.new-product-body {
+  font-family: sans-serif;
+  /* font-weight: 600; */
+  display: flex;
+  flex-flow: column;
+  gap: 0.4rem;
+  margin-top: 0.4rem;
+  /* color: rgb(82, 82, 82); */
+}
+.new-product-body-price{
+  font-family: "Roboto";
+  color: #01040a;
+  font-weight: 500;
+  font-size: 1.1rem;
 }
 
-.title{
-    text-align: center;
-    font-size: 2rem;
-    margin: 2rem 0;
-    text-transform: uppercase;
-    font-family: sans-serif;
+.title {
+  text-align: center;
+  font-size: 2rem;
+  margin: 3rem 0;
+  text-transform: uppercase;
+  color: #01040a;
+}
+
+.sale-title{
+  position: absolute;
+  color: #f0f0f0;
+  top: 50%;
+  z-index: 6;
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding-right: 0.1rem;
+}
+.left-section{
+  text-align: center;
+  position: relative;
 }
