--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 :root {
- 
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+ --color: #0d1117;
+ --accent: #01040a;
+ --border-color: #3c434d;
+ --text-color: #f0f6fc;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -17,9 +17,8 @@
 body {
   font-family: "Raleway", serif;
   font-optical-sizing: auto;
-  font-weight: 100;
   height: 100%;
   width: 100%;
-  background-color: #ffffff;
+  background-color: #dad7d775;
   z-index: 100;
 }
