--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
+}
+html {
+  scroll-padding-top: 108px;
 }
 
 * {
