--- a/src/features/new-arrivals/new-arrivals.css
+++ b/src/features/new-arrivals/new-arrivals.css
@@ -4,7 +4,6 @@
   /* border: 1px solid green; */
 }
 
-
 .category {
   display: block;
   color: #9e9e9e;
@@ -21,31 +20,33 @@
   margin-bottom: 0.5rem;
 }
 
-.sale{
+.sale {
   position: relative;
   display: flex;
- 
-  max-width: 1120px;
+  width: 94%;
+  /* max-width: 1170px; */
   height: 450px;
   margin: 0 auto;
   margin-top: 5rem;
-  
+  /* border: 1px solid red; */
 }
-.overlay-sale{
-position: absolute;
-background-color: rgba(0, 0, 0, 0.5);
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-z-index: 4;
+.overlay-sale {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+  /* border: 1px solid green; */
 }
 
-.banner-img{
-   width: 100%;
-   height: 100%;
- /* height: 80%; */
+.banner-img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  object-position: top;
+
 }
 .new-product-head {
   position: relative;
@@ -57,35 +58,23 @@ z-index: 4;
   height: 100%;
   object-fit: cover;
 }
-.new-product-banner {
-  position: absolute;
-  display: block;
-  z-index: 2;
-  color: #f6f6f6;
-  background-color: #0c0e11a6;
-  letter-spacing: 1px;
-  font-size: 0.7rem;
-  left: 10px;
-  top: 10px;
-  padding: 3px 5px;
-  font-weight: 100;
-  font-family: sans-serif;
-  /* border-radius: 3px; */
-}
+
 .new-product-body {
   font-family: sans-serif;
+  font-size: 0.84rem;
   /* font-weight: 600; */
   display: flex;
   flex-flow: column;
   gap: 0.4rem;
   margin-top: 0.4rem;
+  padding-left: 0.2rem;
   /* color: rgb(82, 82, 82); */
 }
-.new-product-body-price{
+.new-product-body-price {
   font-family: "Roboto";
+  font-size: 0.85rem;
   color: #01040a;
   font-weight: 500;
-  font-size: 1.1rem;
 }
 
 .title {
@@ -96,16 +85,17 @@ z-index: 4;
   color: #01040a;
 }
 
-.sale-title{
+.sale-title {
   position: absolute;
   color: #f0f0f0;
   top: 50%;
   z-index: 6;
   font-size: 1.6rem;
-  font-weight: 600;
-  padding-right: 0.1rem;
+  font-weight: 400;
+  /* padding-right: 0.1rem; */
 }
-.left-section{
+.left-section {
+  width: 100%;
   text-align: center;
   position: relative;
 }
