--- a/src/features/signup-form/signup-section.css
+++ b/src/features/signup-form/signup-section.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     min-height: 100vh;
+    /* border: 1px solid red; */
 }
 .signup-section{
     display: flex;
